tests/negative/neg_pr113_mixed_constraints.safe
package neg_PR113_Mixed_Constraints
   type packet (Active : boolean = True, Kind : character = 'A', Count : integer = 0) is
      record
         value : integer;

   p : packet (True, Kind = 'A', Count = 1) = (value = 1);

